--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
 alembic==0.9.9
-bcrypt @ file:///C:/ci/bcrypt_1607022693089/work
+bcrypt==3.2.0
 blinker==1.4
-certifi @ file:///C:/Windows/TEMP/abs_e9b7158a-aa56-4a5b-87b6-c00d295b01fanefpc8_o/croots/recipe/certifi_1655968940823/work/certifi
-cffi @ file:///C:/ci_310/cffi_1642682485096/work
+certifi==2022.6.15
+cffi==1.15.0
 chardet==3.0.4
-click @ file:///C:/ci/click_1646038595831/work
-colorama @ file:///tmp/build/80754af9/colorama_1607707115595/work
+click==8.0.4
+colorama==0.4.4
 Flask==2.1.2
-Flask-Bcrypt @ file:///Users/ktietz/demo/mc3/conda-bld/flask-bcrypt_1630648582424/work
+Flask-Bcrypt==0.7.1
 Flask-Dance==0.14.0
 Flask-DebugToolbar==0.10.1
 Flask-Login==0.4.1
@@ -20,25 +20,28 @@ gunicorn==20.1.0
 httplib2==0.11.3
 idna==2.6
 importlib-metadata==4.11.4
-itsdangerous @ file:///tmp/build/80754af9/itsdangerous_1621432558163/work
-Jinja2 @ file:///opt/conda/conda-bld/jinja2_1647436528585/work
+itsdangerous==2.0.1
+Jinja2==3.0.3
 lazy==1.3
 Mako==1.0.7
-MarkupSafe @ file:///C:/ci/markupsafe_1654508077284/work
+MarkupSafe==2.1.1
 oauth2==1.9.0.post1
 oauthlib==2.0.7
 Pillow==9.0.1
-pycparser @ file:///tmp/build/80754af9/pycparser_1636541352034/work
+pip==21.2.4
+pycparser==2.21
 python-dateutil==2.7.2
 python-editor==1.0.3
 requests==2.18.4
 requests-oauthlib==0.8.0
-six @ file:///tmp/build/80754af9/six_1644875935023/work
+setuptools==61.2.0
+six==1.16.0
 SQLAlchemy==1.2.6
 SQLAlchemy-Utils==0.33.2
 urllib3==1.22
 URLObject==2.4.3
-Werkzeug @ file:///opt/conda/conda-bld/werkzeug_1645628268370/work
+Werkzeug==2.0.3
+wheel==0.37.1
 wincertstore==0.2
 WTForms==2.1
 zipp==3.8.0
