--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ blinker==1.4
 certifi==2022.6.15
 cffi==1.15.0
 chardet==3.0.4
+charset-normalizer==2.1.0
 click==8.0.4
 colorama==0.4.4
 Flask==2.1.2
@@ -28,12 +29,12 @@ MarkupSafe==2.1.1
 oauth2==1.9.0.post1
 oauthlib==2.0.7
 Pillow==9.0.1
-pip==21.2.4
+pip==22.1.2
 pycparser==2.21
 pyparsing==2.4.7
 python-dateutil==2.7.2
 python-editor==1.0.3
-requests==2.18.4
+requests==2.28.1
 requests-oauthlib==0.8.0
 setuptools==62.6.0
 six==1.16.0
